Added DTO class to add field on paginations